# capra_motion_detection_ros

./: .clang-format  CMakeLists.txt  README.md  package.xml
capra_motion_detection_ros/: package.xml
capra_motion_detection_ros/launch/: capra_motion_detection.launch
capra_motion_detection_ros/src/: capra_motion_detection.cpp
launch/: capra_motion_detection.launch
src/: capra_motion_detection.cpp  capra_motion_detection_node.cpp
